Import ncp3-gate 0d94857655ff re #13272 rb4354 Stucked Inquiry commands put a pool to degraded state with too many errors without displaying errors in zpool status (fix Makefile)    makefile-dicts.patch

--- a/usr/src/cmd/fm/dicts/Makefile
+++ b/usr/src/cmd/fm/dicts/Makefile
@@ -37,7 +37,9 @@ common_DCNAMES = \
 	SCA500 \
 	SCA1000 \
 	SENSOR \
-	TEST \
+	TEST
+
+common_DCNAMESONLY = \
 	DEV
 
 i386_DCNAMES = \
@@ -60,14 +62,16 @@ ALLDCNAMES = \
 	$(sparc_DCNAMES) \
 	$(i386_DCNAMES)
 
-DCFILES = $(DCNAMES:%=%.dict)
+DCFILES = $(DCNAMES:%=%.dict) \
+	$(common_DCNAMESONLY:%=%.dict)
 POFILES = $(DCNAMES:%=%.po)
 MOFILES = $(DCNAMES:%=%.mo)
 
 ROOTDCDIR = $(ROOTLIB)/fm/dict
 ROOTLCDIR = $(ROOTLIB)/locale/C/LC_MESSAGES
 
-ROOTDCFILES = $(DCNAMES:%=$(ROOTDCDIR)/%.dict)
+ROOTDCFILES = $(DCNAMES:%=$(ROOTDCDIR)/%.dict) \
+	$(common_DCNAMESONLY:%=$(ROOTDCDIR)/%.dict)
 ROOTPOFILES = $(DCNAMES:%=$(ROOTLCDIR)/%.po)
 ROOTMOFILES = $(DCNAMES:%=$(ROOTLCDIR)/%.mo)
 ROOTALLPOFILES = $(ALLDCNAMES:%=$(ROOTLCDIR)/%.po)
