--- a/usr/src/lib/brand/ipkg/zone/pkgrm.conf
+++ b/usr/src/lib/brand/ipkg/zone/pkgrm.conf
@@ -18,36 +18,12 @@
 #
 # CDDL HEADER END
 #
+# Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-# Copyright (c) 2006, 2010, Oracle and/or its affiliates. All rights reserved.
-# Copyright 2013 Nexenta Systems, Inc.  All rights reserved.
-#
-# lib/brand/Makefile
-#
-# include global definitions
-include ../../Makefile.master
-
-#
-# Build everything in parallel; use .WAIT for dependencies
-.PARALLEL:
-
-SUBDIRS= shared .WAIT sn1 solaris10 ipkg labeled $($(MACH)_SUBDIRS)
-MSGSUBDIRS= solaris10 ipkg shared $($(MACH)_MSGSUBDIRS)
-
-all :=		TARGET= all
-install :=	TARGET= install
-clean :=	TARGET= clean
-clobber :=	TARGET= clobber
-lint :=		TARGET= lint
-_msg :=		TARGET= _msg
-
-.KEEP_STATE:
-
-all install clean clobber lint: $(SUBDIRS)
-
-_msg: $(MSGSUBDIRS)
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+# This is a list of IPS packages which should be removed when installing
+# a zone from an image of a physical system (that is, only when installing
+# with the zoneadm -d or -a option).  Site-specific packages which must be
+# removed should be listed in this file.  During the zone installation, the
+# packages will be removed if they existed on the original physical system.
+# 
