--- a/usr/src/uts/intel/virtio/Makefile
+++ b/usr/src/uts/intel/virtio/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright (c) 2012 Nexenta Systems, Inc. All rights reserved.
+# Copyright 2012 Nexenta Systems, Inc.  All rights reserved.
 #
 
 #
