re #13879 make libsqlite a real shared lib

--- a/usr/src/cmd/svc/configd/Makefile
+++ b/usr/src/cmd/svc/configd/Makefile
@@ -69,6 +69,9 @@ LIBSCF		= $(SRC)/lib/libscf
 SCRIPTFILE	= restore_repository
 ROOTSCRIPTFILE	= $(ROOTCMDDIR)/$(SCRIPTFILE)
 
+#
+# Native variant (used in ../seed)
+#
 $(NATIVE_BUILD)CC =	$(NATIVECC)
 $(NATIVE_BUILD)LD =	$(NATIVELD)
 $(NATIVE_BUILD)CFLAGS =	$(NATIVE_CFLAGS)
@@ -80,16 +83,16 @@ $(NATIVE_BUILD)LDLIBS = -L$(LIBUUTIL)/native -R $(LIBUUTIL)/native $(MYLDLIBS)
 DIRMODE = 0755
 FILEMODE = 0555
 
-LIBSQLITE = $(ROOT)/usr/lib/libsqlite.o
-$(NATIVE_BUILD)LIBSQLITE = $(ROOT)/usr/lib/libsqlite-native.o
-SQLITELINT = $(ROOT)/usr/lib/llib-lsqlite.ln
+OBJSQLITE =
+LIBSQLITE = -lsqlite
+$(NATIVE_BUILD)OBJSQLITE = $(ROOT)/lib/libsqlite-native.o
+$(NATIVE_BUILD)LIBSQLITE =
 
-OBJS += $(LIBSQLITE)
+OBJS += $(OBJSQLITE)
+LDLIBS += $(LIBSQLITE)
 
 install := TARGET = install
 clobber := TARGET = clobber
-
-lint	:= LDLIBS += $(SQLITELINT)
 
 .KEEP_STATE:
 .PARALLEL: $(MYOBJS) $(MYOBJS:%.o=%-native.o)
