--- a/usr/src/man/man1m/Makefile
+++ b/usr/src/man/man1m/Makefile
@@ -106,6 +106,7 @@ _MANFILES=	6to4relay.1m		\
  	 	dhcpconfig.1m		\
  	 	dhcpmgr.1m		\
  	 	dhtadm.1m		\
+		disk-dmc.1m		\
  	 	disks.1m		\
  	 	diskscan.1m		\
  	 	dispadmin.1m		\
