--- a/usr/src/lib/gss_mechs/mech_krb5/Makefile
+++ b/usr/src/lib/gss_mechs/mech_krb5/Makefile
@@ -71,7 +71,7 @@ install_dir:	$(ROOTLIBDIR) $(BUILD64)
 install_h:
 
 clobber: $(SUBDIRS)
-	-$(RM) $(POFILE) $(POFILES)
+	$(RM) $(POFILE) $(POFILES)
 
 check: $(CHECKHDRS)
 
