--- a/usr/src/uts/Makefile
+++ b/usr/src/uts/Makefile
@@ -203,8 +203,7 @@ clean clobber: $($(MACH)_ARCHITECTURES) $(DYNHDRDIRS)
 		$(RM) $(PMTMO_FILE) ; \
 	fi
 
-# Undo install_h without going through everything under uts.
-# For testing convenience.
+# testing convenience
 clobber_h: $(DYNHDRDIRS)
 
 clean.lint modlist: $($(MACH)_ARCHITECTURES)
@@ -216,9 +215,10 @@ clean.lint modlist: $($(MACH)_ARCHITECTURES)
 # the user will be interested in), it's historically been set to
 # mirror the $(XRDIRS) list, and that works kinda sorta okay.
 #
-XRDIRS = $(sparc_ARCHITECTURES) $(i386_ARCHITECTURES) sun4 sfmmu	\
+SHARED_XRDIRS = $(sparc_ARCHITECTURES) $(i386_ARCHITECTURES) sun4 sfmmu	\
 	sun common
 NZA_XRDIRS = $(SHARED_XRDIRS:%=% ../../nza-closed/uts/%)
+XRDIRS = $(SHARED_XRDIRS)
 $(NZA_MODS)XRDIRS = $(NZA_XRDIRS)
 
 XRINCDIRS = $(XRDIRS)
