--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# .gitignore for nza-kernel checkouts.
+# .gitignore for illumos checkouts.
 # Note: this does not try to ignore all files in a fully built workspace.
 # Rather, you are expected to "make clobber" before running "git status".
 .make.state*
